// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanConfigs ADD_TARGET_CONFIGURATION should add a plan configuration 1`] = `
Array [
  Object {
    "config": "ls -l",
    "name": "ls",
    "packageInfos": undefined,
    "pinned": false,
    "stager": Object {
      "type": "integrated",
    },
    "tool": Object {
      "iconUri": "atom://myplugin/icon.png",
      "id": "toolid",
      "name": "shell",
    },
  },
]
`;

exports[`PlanConfigs PIN_TARGET_CONFIGURATION should pin plan config 1`] = `
Array [
  Object {
    "config": "ls -l",
    "name": "ls",
    "packageInfos": Object {
      "name": "",
      "path": "/",
      "type": "directory",
    },
    "pinned": true,
    "stager": Object {
      "type": "integrated",
    },
    "tool": Object {
      "iconUri": "atom://myplugin/icon.png",
      "id": "toolid",
      "name": "shell",
    },
  },
  Object {
    "config": "Invoke-Mimikatz",
    "name": "mimikatz",
    "packageInfos": Object {
      "name": "",
      "path": "/",
      "type": "directory",
    },
    "pinned": false,
    "stager": Object {
      "type": "integrated",
    },
    "tool": Object {
      "iconUri": "atom://myplugin/icon.png",
      "id": "toolid",
      "name": "powershell",
    },
  },
]
`;

exports[`PlanConfigs UNPIN_TARGET_CONFIGURATION should unpin plan config 1`] = `
Array [
  Object {
    "config": "ls -l",
    "name": "ls",
    "packageInfos": Object {
      "name": "",
      "path": "/",
      "type": "directory",
    },
    "pinned": false,
    "stager": Object {
      "type": "integrated",
    },
    "tool": Object {
      "iconUri": "atom://myplugin/icon.png",
      "id": "toolid",
      "name": "shell",
    },
  },
  Object {
    "config": "Invoke-Mimikatz",
    "name": "mimikatz",
    "packageInfos": Object {
      "name": "",
      "path": "/",
      "type": "directory",
    },
    "pinned": false,
    "stager": Object {
      "type": "integrated",
    },
    "tool": Object {
      "iconUri": "atom://myplugin/icon.png",
      "id": "toolid",
      "name": "powershell",
    },
  },
]
`;
